# stagehand

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cairn/: config.json
.cairn/issues/: stg-07a6.json  stg-736f.json  stg-97c0.json  stg-b74e.json  stg-f3d5.json  stg-teu.1.json  stg-teu.2.json  stg-teu.3.json  stg-teu.4.json  stg-teu.5.json  stg-teu.json
cookbook/: README.md  implementation_step.py  run_step.py  train_and_persist.py
docs/: index.html
examples/: agent_fleet.py  artifacts.py  dsl_demo.py  fanout_retry.py  serve.py  sweep.py
src/stagehand/: __init__.py  _log.py  agents.py  artifacts.py  checks.py  dashboard.py  dsl.py  engine.py  manifest.py  memo.py  monitor.py  pipeline.py  serve.py
tests/: test_agents.py  test_artifacts.py  test_check.py  test_checks.py  test_dashboard.py  test_dsl.py  test_engine.py  test_live.py  test_logging.py  test_manifest.py  test_memo.py  test_monitor.py  test_pipeline.py  test_serve.py  test_smoke.py
