[project]
name = "stagehand"
version = "0.1.0"
description = "Primitives + patterns for orchestrating and monitoring experiment sweeps: a file-backed progress monitor, a live HTML dashboard, and a staged async pipeline with gates."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
# The core (monitor + dashboard + pipeline) is pure stdlib — no runtime deps. Keeping
# it dependency-free is deliberate: it drops into any experiment repo without dragging
# a tree of transitive pins along with it.
dependencies = []

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stagehand"]
